--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/exercicio2/style.css
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/exercicio2/style.css
@@ -18,14 +18,18 @@ header h1 {
 header h3 {
     padding: 0 5px 5px ;
 }
+main {
+    display: flex;
+}
 
 article {
-    width: 70%;
+    width: 80%;
     display: inline-block;  
     margin: 0;
     padding: 10px;
     background-color: #E8D6CB;
 }
+
 
 footer {
     padding: 10px;
@@ -35,9 +39,11 @@ footer {
 
 aside {
     width: 20%;
-    position: fixed;
-    top: 100px;
-    right: 0;
+    display: inline-block;
+    background-color: #D0ADA7;
+    padding: 10px;
+    vertical-align: top;
+    margin: 0;
 }
 
 .title-style {
@@ -71,6 +77,7 @@ aside {
     width: 300px;
     display: inline-block;
     padding-left: 80px ;
+    vertical-align: top;
 
 }
 
@@ -78,6 +85,7 @@ aside {
     width: 400px;
     display: inline-block;
     padding-left: 30px ;
+    vertical-align: top;
 
 }
 
