Testando mais possibilidades em media query

--- a/fundamentos/secao-06-html-css-forms-flexbox-responsivo/dia-05-css-responsivo-mobile/exercicio2/small-screen.css
+++ b/fundamentos/secao-06-html-css-forms-flexbox-responsivo/dia-05-css-responsivo-mobile/exercicio2/small-screen.css
@@ -41,9 +41,9 @@ figcaption {
   }
 
   figure {
-    min-width: 40%;
-    display: flex;
-    flex-direction: column;
+    width: 40%;
+    /* display: flex;
+    flex-direction: column; */
   }
 
 
